--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Simplon</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="icon" href="assets/favicon.png" type="image/jpg">
+    <link rel="icon" href="assets/images/favicon.png" type="image/jpg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
@@ -851,7 +851,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="assets/favicon.png" alt="Simplon" onclick="window.location.href = 'index.html'"></div>
+        <div class="logo"><img src="assets/images/favicon.png" alt="Simplon" onclick="window.location.href = 'index.html'"></div>
         <nav>
             <div class="hamburger" onclick="toggleMenu()">
                 <div></div>
@@ -860,23 +860,23 @@
             </div>
             <div class="nav-links">
                 <a href="index.html" class="nav-icon">
-                    <img src="assets/home.png" alt="">
+                    <img src="assets/images/home.png" alt="">
                     <span class="label">Home</span>
                 </a>
                 <a href="contactus.html" class="nav-icon">
-                    <img src="assets/contact.png" alt="">
+                    <img src="assets/images/contact.png" alt="">
                     <span class="label">Contact</span>
                 </a>
                 <a href="aboutus.html" class="nav-icon">
-                    <img src="assets/aboutus.png" alt="">
+                    <img src="assets/images/aboutus.png" alt="">
                     <span class="label">About</span>
                 </a>
                 <a href="gallery.html" class="nav-icon">
-                    <img src="assets/gallery.png" alt="">
+                    <img src="assets/images/gallery.png" alt="">
                     <span class="label">Gallery</span>
                 </a>
                 <a href="index.html" class="nav-icon">
-                    <img src="assets/cart.png" alt="">
+                    <img src="assets/images/cart.png" alt="">
                     <span class="label">Cart</span>
                 </a>
             </div>
@@ -886,11 +886,11 @@
     <div class="menu-container">
         <div class="menu">
             <a href="#" onclick="toggleDropdown('makeup')">MakeUp</a>
-            <a href="index.html">Hair</a>
-            <a href="index.html">SkinCare</a>
-            <a href="index.html">Jewellery</a>
+            <a href="hairs.html">Hair</a>
+            <a href="skincare.html">SkinCare</a>
+            <a href="jewellery.html">Jewellery</a>
             <a href="#" onclick="toggleDropdown('nail')">Nail</a>
-            <a href="index.html">Kits</a>
+            <a href="weddingkits.html">Kits</a>
         </div>
     </div>
 
@@ -900,9 +900,9 @@
         <h2>Makeup</h2>
         <div class="columns">
             <div class="column">
-                <a href="">Face</a>
-                <a href="">Eyes</a>
-                <a href="">Lips</a>
+                <a href="complexion.html">Face</a>
+                <a href="eyemakeup.html">Eyes</a>
+                <a href="lips.html">Lips</a>
             </div>
         </div>
     </div>
@@ -912,11 +912,12 @@
         <h2>Nails</h2>
         <div class="columns">
             <div class="column">
-                <a href="index.html">Nail Paints</a>
-                <a href="index.html">Nail Art</a>
+                <a href="nails.html">Nail Paints</a>
+                <a href="nailsart.html">Nail Art</a>
             </div>
         </div>
     </div>
+
     <section class="about-section">
         <div class="content">
             <div class="text">
@@ -930,7 +931,7 @@
                     everyday essentials or indulging in luxurious self-care, we're here to make beauty a joyful, inclusive experience for everyone. Because true beauty is compassionate, conscious, and made for everyone. </p>
             </div>
             <div class="image">
-                <img src="assets/aboutus.jpg" alt="Meeting Image">
+                <img src="assets/images/aboutus.jpg" alt="Meeting Image">
             </div>
         </div>
     </section>
@@ -942,22 +943,22 @@
         <div class="team-container">
 
             <div class="team-member">
-                <img src="assets/afifa.jpg" alt="Afifa Zia">
+                <img src="assets/images/afifa.jpg" alt="Afifa Zia">
                 <h3> Afifa Zia </h3>
                 <p>Product Manager</p>
             </div>
             <div class="team-member">
-                <img src="assets/hala.jpg" alt="Hala Haroon">
+                <img src="assets/images/hala.jpg" alt="Hala Haroon">
                 <h3> Hala Haroon </h3>
                 <p> SEO </p>
             </div>
             <div class="team-member">
-                <img src="assets/yumna.jpg" alt="Yumna Hussain">
+                <img src="assets/images/yumna.jpg" alt="Yumna Hussain">
                 <h3> Yumna Hussain </h3>
                 <p> CEO </p>
             </div>
             <div class="team-member">
-                <img src="assets/rija.jpg" alt="Umm-e-Rija">
+                <img src="assets/images/rija.jpg" alt="Umm-e-Rija">
                 <h3>Umm-e-Rija</h3>
                 <p> Accountant </p>
             </div>
@@ -1024,31 +1025,31 @@
             <div class="row justify-content-center mb-3">
                 <div class="clients d-flex flex-wrap justify-content-center">
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/chanel.png" alt="Chanel" class="img-fluid">
+                        <img src="assets/images/chanel.png" alt="Chanel" class="img-fluid">
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/maybelline.jpg" alt="Maybelline" class="img-fluid">
+                        <img src="assets/images/maybelline.jpg" alt="Maybelline" class="img-fluid">
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/mac.jpg" alt="MAC Cosmetics" class="img-fluid">
+                        <img src="assets/images/mac.jpg" alt="MAC Cosmetics" class="img-fluid">
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/loreal.svg" alt="L'Oreal" class="img-fluid">
+                        <img src="assets/images/loreal.svg" alt="L'Oreal" class="img-fluid">
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/nyx.png" alt="NYX" class="img-fluid">
+                        <img src="assets/images/nyx.png" alt="NYX" class="img-fluid">
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/sephora.jpg" alt="Sephora" class="img-fluid">
+                        <img src="assets/images/sephora.jpg" alt="Sephora" class="img-fluid">
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/fentybeauty.png" alt="Fenty Beauty" class="img-fluid">
+                        <img src="assets/images/fentybeauty.png" alt="Fenty Beauty" class="img-fluid">
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/hudabeauty.jpg" alt="Huda Beauty" class="img-fluid">
+                        <img src="assets/images/hudabeauty.jpg" alt="Huda Beauty" class="img-fluid">
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-2 mb-3 text-center">
-                        <img src="assets/estee.png" alt="Estée Lauder" class="img-fluid">
+                        <img src="assets/images/estee.png" alt="Estée Lauder" class="img-fluid">
                     </div>
                 </div>
             </div>
