--- a/contactus.html
+++ b/contactus.html
@@ -894,7 +894,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="assets/favicon.png" alt="Simplon" onclick="window.location.href = 'index.html'"></div>
+        <div class="logo"><img src="assets/images/favicon.png" alt="Simplon" onclick="window.location.href = 'index.html'"></div>
         <nav>
             <div class="hamburger" onclick="toggleMenu()">
                 <div></div>
@@ -903,23 +903,23 @@
             </div>
             <div class="nav-links">
                 <a href="index.html" class="nav-icon">
-                    <img src="assets/home.png" alt="">
+                    <img src="assets/images/home.png" alt="">
                     <span class="label">Home</span>
                 </a>
                 <a href="contactus.html" class="nav-icon">
-                    <img src="assets/contact.png" alt="">
+                    <img src="assets/images/contact.png" alt="">
                     <span class="label">Contact</span>
                 </a>
                 <a href="aboutus.html" class="nav-icon">
-                    <img src="assets/aboutus.png" alt="">
+                    <img src="assets/images/aboutus.png" alt="">
                     <span class="label">About</span>
                 </a>
                 <a href="gallery.html" class="nav-icon">
-                    <img src="assets/gallery.png" alt="">
+                    <img src="assets/images/gallery.png" alt="">
                     <span class="label">Gallery</span>
                 </a>
                 <a href="index.html" class="nav-icon">
-                    <img src="assets/cart.png" alt="">
+                    <img src="assets/images/cart.png" alt="">
                     <span class="label">Cart</span>
                 </a>
             </div>
@@ -929,11 +929,11 @@
     <div class="menu-container">
         <div class="menu">
             <a href="#" onclick="toggleDropdown('makeup')">MakeUp</a>
-            <a href="index.html">Hair</a>
-            <a href="index.html">SkinCare</a>
-            <a href="index.html">Jewellery</a>
+            <a href="hairs.html">Hair</a>
+            <a href="skincare.html">SkinCare</a>
+            <a href="jewellery.html">Jewellery</a>
             <a href="#" onclick="toggleDropdown('nail')">Nail</a>
-            <a href="index.html">Kits</a>
+            <a href="weddingkits.html">Kits</a>
         </div>
     </div>
 
@@ -943,9 +943,9 @@
         <h2>Makeup</h2>
         <div class="columns">
             <div class="column">
-                <a href="">Face</a>
-                <a href="">Eyes</a>
-                <a href="">Lips</a>
+                <a href="complexion.html">Face</a>
+                <a href="eyemakeup.html">Eyes</a>
+                <a href="lips.html">Lips</a>
             </div>
         </div>
     </div>
@@ -955,11 +955,12 @@
         <h2>Nails</h2>
         <div class="columns">
             <div class="column">
-                <a href="index.html">Nail Paints</a>
-                <a href="index.html">Nail Art</a>
+                <a href="nails.html">Nail Paints</a>
+                <a href="nailsart.html">Nail Art</a>
             </div>
         </div>
     </div>
+
     <div class="contactUs">
         <div class="title">
             <h2> Get In Touch</h2>
