--- a/gallery.html
+++ b/gallery.html
@@ -538,7 +538,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="assets/favicon.png" alt="Simplon" onclick="window.location.href = 'index.html'"></div>
+        <div class="logo"><img src="assets/images/favicon.png" alt="Simplon" onclick="window.location.href = 'index.html'"></div>
         <nav>
             <div class="hamburger" onclick="toggleMenu()">
                 <div></div>
@@ -547,23 +547,23 @@
             </div>
             <div class="nav-links">
                 <a href="index.html" class="nav-icon">
-                    <img src="assets/home.png" alt="">
+                    <img src="assets/images/home.png" alt="">
                     <span class="label">Home</span>
                 </a>
                 <a href="contactus.html" class="nav-icon">
-                    <img src="assets/contact.png" alt="">
+                    <img src="assets/images/contact.png" alt="">
                     <span class="label">Contact</span>
                 </a>
                 <a href="aboutus.html" class="nav-icon">
-                    <img src="assets/aboutus.png" alt="">
+                    <img src="assets/images/aboutus.png" alt="">
                     <span class="label">About</span>
                 </a>
                 <a href="gallery.html" class="nav-icon">
-                    <img src="assets/gallery.png" alt="">
+                    <img src="assets/images/gallery.png" alt="">
                     <span class="label">Gallery</span>
                 </a>
                 <a href="index.html" class="nav-icon">
-                    <img src="assets/cart.png" alt="">
+                    <img src="assets/images/cart.png" alt="">
                     <span class="label">Cart</span>
                 </a>
             </div>
@@ -573,11 +573,11 @@
     <div class="menu-container">
         <div class="menu">
             <a href="#" onclick="toggleDropdown('makeup')">MakeUp</a>
-            <a href="index.html">Hair</a>
-            <a href="index.html">SkinCare</a>
-            <a href="index.html">Jewellery</a>
+            <a href="hairs.html">Hair</a>
+            <a href="skincare.html">SkinCare</a>
+            <a href="jewellery.html">Jewellery</a>
             <a href="#" onclick="toggleDropdown('nail')">Nail</a>
-            <a href="index.html">Kits</a>
+            <a href="weddingkits.html">Kits</a>
         </div>
     </div>
 
@@ -587,9 +587,9 @@
         <h2>Makeup</h2>
         <div class="columns">
             <div class="column">
-                <a href="">Face</a>
-                <a href="">Eyes</a>
-                <a href="">Lips</a>
+                <a href="complexion.html">Face</a>
+                <a href="eyemakeup.html">Eyes</a>
+                <a href="lips.html">Lips</a>
             </div>
         </div>
     </div>
@@ -599,11 +599,12 @@
         <h2>Nails</h2>
         <div class="columns">
             <div class="column">
-                <a href="index.html">Nail Paints</a>
-                <a href="index.html">Nail Art</a>
+                <a href="nails.html">Nail Paints</a>
+                <a href="nailsart.html">Nail Art</a>
             </div>
         </div>
     </div>
+
     <h1 class="text-center">Gallery</h1>
     <div class="container-fluid gallery">
         <div class="row justify-content-center mb-3">
@@ -690,58 +691,57 @@
     }
     let gallery = [
         // makeup
-        "assets/gimg1.avif",
-        "assets/gimg2.avif",
-        "assets/gimg3.avif",
-        "assets/gimg4.avif",
-        "assets/gimg5.avif",
-        "assets/gimg6.avif",
-        "assets/gimg7.avif",
-        "assets/gimg8.avif",
-        "assets/gimg9.avif",
-        "assets/gimg10.avif",
-        "assets/gimg11.avif",
-        "assets/gimg12.avif",
-        "assets/gimg13.avif",
-        "assets/gimg14.avif",
-        "assets/gimg15.avif",
-        "assets/gimg16.avif",
-        "assets/gimg17.avif",
-        "assets/gimg18.avif",
-        "assets/gimg19.avif",
-        "assets/gimg20.avif",
-        "assets/gimg21.avif",
-        "assets/gimg22.avif",
-        "assets/gimg23.avif",
-        "assets/gimg24.avif",
-
+        "assets/images/gimg1.avif",
+        "assets/images/gimg2.avif",
+        "assets/images/gimg3.avif",
+        "assets/images/gimg4.avif",
+        "assets/images/gimg5.avif",
+        "assets/images/gimg6.avif",
+        "assets/images/gimg7.avif",
+        "assets/images/gimg8.avif",
+        "assets/images/gimg9.avif",
+        "assets/images/gimg10.avif",
+        "assets/images/gimg11.avif",
+        "assets/images/gimg12.avif",
+        "assets/images/gimg13.avif",
+        "assets/images/gimg14.avif",
+        "assets/images/gimg15.avif",
+        "assets/images/gimg16.avif",
+        "assets/images/gimg17.avif",
+        "assets/images/gimg18.avif",
+        "assets/images/gimg19.avif",
+        "assets/images/gimg20.avif",
+        "assets/images/gimg21.avif",
+        "assets/images/gimg22.avif",
+        "assets/images/gimg23.avif",
+        "assets/images/gimg24.avif",
         // jewellery
-        "assets/gimg25.avif",
-        "assets/gimg26.avif",
-        "assets/gimg27.avif",
-        "assets/gimg28.avif",
-        "assets/gimg29.avif",
-        "assets/gimg30.avif",
-        "assets/gimg31.avif",
-        "assets/gimg32.avif",
-        "assets/gimg33.avif",
-        "assets/gimg34.avif",
-        "assets/gimg35.avif",
-        "assets/gimg36.avif",
+        "assets/images/gimg25.avif",
+        "assets/images/gimg26.avif",
+        "assets/images/gimg27.avif",
+        "assets/images/gimg28.avif",
+        "assets/images/gimg29.avif",
+        "assets/images/gimg30.avif",
+        "assets/images/gimg31.avif",
+        "assets/images/gimg32.avif",
+        "assets/images/gimg33.avif",
+        "assets/images/gimg34.avif",
+        "assets/images/gimg35.avif",
+        "assets/images/gimg36.avif",
 
         // nail polish
-        "assets/gimg37.avif",
-        "assets/gimg38.avif",
-        "assets/gimg39.avif",
-        "assets/gimg40.avif",
-        "assets/gimg42.avif",
-        "assets/gimg43.avif",
-        "assets/gimg44.avif",
-        "assets/gimg45.avif",
-        "assets/gimg46.avif",
-        "assets/gimg47.avif",
-        "assets/gimg48.avif",
-        "assets/gimg49.avif",
+        "assets/images/gimg37.avif",
+        "assets/images/gimg38.avif",
+        "assets/images/gimg39.avif",
+        "assets/images/gimg40.avif",
+        "assets/images/gimg41.avif",
+        "assets/images/gimg42.avif",
+        "assets/images/gimg44.avif",
+        "assets/images/gimg45.avif",
+        "assets/images/gimg46.avif",
+        "assets/images/gimg47.avif",
+        "assets/images/gimg48.avif",
+        "assets/images/gimg49.avif",
     ];
 
     function rendergallery() {
