--- a/jiocij.html
+++ b/jiocij.html
@@ -327,6 +327,27 @@
             margin: 0;
             text-transform: capitalize;
         }
+        
+        .btn-add-cart {
+            background-color: white;
+            color: black;
+            border: 1px solid whitesmoke;
+            padding: 10px 15px;
+            font-size: 14px;
+            font-weight: bold;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+            width: 100%;
+            max-width: 150px;
+            text-align: center;
+            margin-top: auto;
+        }
+        
+        .btn-add-cart:hover {
+            background-color: #f6cae0;
+            transform: scale(1.05);
+        }
     </style>
 </head>
 
