--- a/contactus.html
+++ b/contactus.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="assets/favicon.png" type="image/jpg">
+    <link rel="icon" href="assets/images/favicon.png" type="image/jpg">
     <link href="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.min.css" rel="stylesheet">
 
     <style>
@@ -1018,12 +1018,12 @@
                 <div class="infobox" style="margin-left: 50px;">
                     <div style="display: flex; flex-direction: row; align-items: center;">
                         <span> <img src="https://cdn-icons-png.flaticon.com/512/2838/2838912.png" alt="" height="20px" width="20px"> </span>
-                        <p style="margin: 0%;"> 212 Street , House,no 45 <br> Islamabad Pakistan</p>
+                        <p style="margin: 0%;">House no. 45, Street 212, Sector G-9, Islamabad, Pakistan.</p>
                     </div>
 
                     <div style="display: flex; flex-direction: row; align-items: center;">
                         <span> <img src="https://static.vecteezy.com/system/resources/thumbnails/018/931/264/small_2x/black-mail-icon-png.png" alt=""  height="20px" width="20px"> </span>
-                        <a href="mailto:contactus@gmail.com"> contactus@gmail.com</a>
+                        <a href="mailto:contactus@gmail.com"> info.simplonbeauty@gmail.com</a>
                     </div>
 
                     <div style="display: flex; flex-direction: row; align-items: center;">
