--- a/complexion.html
+++ b/complexion.html
@@ -932,6 +932,23 @@
 
 
     <script>
+        function toggleMenu() {
+        document.querySelector(".nav-links").classList.toggle("show");
+    }
+    function toggleDropdown(category) {
+        const dropdowns = document.querySelectorAll('.dropdown');
+        dropdowns.forEach(dropdown => {
+            if (dropdown.id === category) {
+                dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
+            } else {
+                dropdown.style.display = 'none';
+            }
+        });
+    }
+
+    function closeDropdown(category) {
+        document.getElementById(category).style.display = 'none';
+    }
         let eyeMakeup = [
             ["Foundation", "assets/images/foundation logo.webp"],
             ["Blush", "assets/images/blush logo.webp"],
