--- a/index.html
+++ b/index.html
@@ -2120,10 +2120,10 @@
 </html>
 <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 <script>
-    // document.addEventListener("DOMContentLoaded", function() {
-    //     var md = new bootstrap.Modal(document.getElementById("staticBackdrop"));
-    //     md.show();
-    // });
+    document.addEventListener("DOMContentLoaded", function() {
+        var md = new bootstrap.Modal(document.getElementById("staticBackdrop"));
+        md.show();
+    });
 
     function toggleMenu() {
         document.querySelector(".nav-links").classList.toggle("show");
