--- a/index.html
+++ b/index.html
@@ -2230,6 +2230,7 @@
             category_container.appendChild(card);
         });
     }
+    // afifa's code
     rendercategories();
 
     let selectedRating = 0;
