--- a/aboutus.html
+++ b/aboutus.html
@@ -943,24 +943,24 @@
         <div class="team-container">
 
             <div class="team-member">
-                <img src="assets/images/afifa.jpg" alt="Afifa Zia">
-                <h3> Afifa Zia </h3>
-                <p>Product Manager</p>
+                <img src="assets/images/yusha.jpeg" alt="Afifa Zia">
+                <h3> Yusha Mirza </h3>
+                <p>Functionality/Frontend</p>
             </div>
             <div class="team-member">
-                <img src="assets/images/hala.jpg" alt="Hala Haroon">
-                <h3> Hala Haroon </h3>
-                <p> SEO </p>
+                <img src="assets/images/afifa.jpg" alt="Hala Haroon">
+                <h3> Afifa Zia </h3>
+                <p> Frontend Developer </p>
             </div>
             <div class="team-member">
                 <img src="assets/images/yumna.jpg" alt="Yumna Hussain">
                 <h3> Yumna Hussain </h3>
-                <p> CEO </p>
+                <p> Frontend Develoepr </p>
             </div>
             <div class="team-member">
                 <img src="assets/images/rija.jpg" alt="Umm-e-Rija">
                 <h3>Umm-e-Rija</h3>
-                <p> Accountant </p>
+                <p> UI Component Developer </p>
             </div>
         </div>
     </section>
